# sugar

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
docs/reference/: sugar.md
examples/: demo_action.py  demo_pprint.py  demo_signature.py  demo_tracback.py  other_argparse.py  usage_argument_app.py  usage_command_app.py  usage_shell.py  usage_with_cmds.py  usage_without_cmds.py
requirements/: dev.txt
src/sugar/: __init__.py  _action.py  _app.py  _constant.py  _eval.py  _formatter.py  _parser.py  _spec.py  _utils.py  exception.py
src/sugar/experimental/: __init__.py  auto_pprint.py  lazy_import.py
tests/: test_app.py  test_formatter.py
tests/test_action/: test_Action.py  test_auto.py  test_ext_isinstance.py
tests/test_eval/: test_ext_eval.py
tests/test_init/: test_argument_parser.py
tests/test_parser/: test_seperate_argv.py
